[package]
name = "timeline-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
colorgrad = "0.5.0"
image = "0.24.1"
imageproc = "0.23.0"
location-history = { path = "../location-history" }
structopt = "0.3.26"
